[package]
name = "spectral"
version = "0.1.2"
edition = "2024"

[lints.clippy]
new_without_default = "allow"

[profile.dist]
inherits = "release"

opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

[dependencies]
dirs = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_double_slider = "1.0.0"
egui_extras = "0.33.3"
eyre = "0.6.12"
image = { version = "0.25.9", default-features = false, features = ["rayon", "png"] }
rand = "0.9.2"
rfd = "0.17.2"
rodio = "0.20.1"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[build-dependencies]
winresource = "0.1.30"
