[package]
name = "spectral"
version = "0.1.7"
edition = "2024"

[lints.clippy]
new_without_default = { level = "allow" }

[profile.release]
debug = true

[profile.dist]
inherits = "release"

opt-level = "z"
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"
debug = false

[dependencies]
cpal = "0.17.3"
dirs = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_double_slider = "1.0.0"
egui_extras = "0.33.3"
eyre = "0.6.12"
image = { version = "0.25.9", default-features = false, features = ["rayon", "png"] }
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.17.2"
rubato = "2.0.0"
rustfft = "6.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = "0.5.5"

[build-dependencies]
winresource = "0.1.30"
